# SimpleRasterizer

./: CMakeLists.txt  Readme.md  backup.txt
bottle/: bottle_model.mtl
src/: Application.cpp  Bound3.hpp  Intersection.hpp  Light.hpp  Material.hpp  Ray.hpp  Renderer.hpp  Scene.hpp  Sphere.hpp  Surface.hpp  Transform.hpp  Triangle.hpp
